[project]
name = "zen-study"
version = "0.2.4"
description = "ZEN Studyのモジュール"
readme = "README.md"
authors = [
    { name = "Lami", email = "info@lami.zip" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
